force-app/main/default/objects/Service_Request_Event__e/Service_Request_Event__e.object-meta.xml
<CustomObject>
    <label>Service_Request_Event</label>
    <pluralLabel>Service_Request_Events</pluralLabel>
</CustomObject>