force-app/main/default/objects/Service_Request_Event__e/fields/Attempt__c.field-meta.xml
<CustomField>
    <fullName>Attempt__c</fullName>
    <description>Retry counter (set by replayer)</description>
    <label>Attempt</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>