force-app/main/default/objects/Service_Request_Event__e/fields/Event_Uuid__c.field-meta.xml
<CustomField>
    <fullName>Event_Uuid__c</fullName>
    <description>Dedupe + DLQ key</description>
    <label>Event Uuid</label>
    <length>36</length>
    <type>Text</type>
</CustomField>