force-app/main/default/objects/Service_Request_Event__e/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Idempotency/correlation</description>
    <label>External Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>