force-app/main/default/objects/Service_Request_Event__e/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Drives SLA calc</description>
    <label>Priority</label>
    <length>20</length>
    <type>Text</type>
</CustomField>