force-app/main/default/objects/Service_Request_Event__e/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <description>Id of the Service_Request__c</description>
    <label>Request Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>