force-app/main/default/objects/Service_Request_Event__e/fields/Tenant_Id__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Id__c</fullName>
    <description>Scoping</description>
    <label>Tenant Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>